COMP: The Gaussian label interpolator does not need the vector comparer
Fixes the following compile error:

antsRegistration2DDouble.cxx
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: 'bool ants::VectorPixelCompare<RealType,1>::operator ()(const itk::Vector<TPixel,1> &,const itk::Vector<TPixel,1> &) const': cannot convert argument 1 from 'const _Kty' to 'const itk::Vector<TPixel,1> &' [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: with [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: [ [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: TPixel=RealType [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: ] [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: and [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: [ [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: _Kty=itk::NumericTraits<double>::RealType [C:\Dev\ANTs-VS22\ANTS-build\Examples\antsUtilities.vcxproj]
C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\include\xtree(1610,17): error C2664: ] [C:\Dev\ANTs-VS22\ANTS-bu

--- a/Examples/make_interpolator_snip.tmpl
+++ b/Examples/make_interpolator_snip.tmpl
@@ -118,9 +118,7 @@ typename InterpolatorType::Pointer interpolator = nullptr;
   else if( !std::strcmp( whichInterpolator.c_str(), "multilabel" ) )
     {
     constexpr unsigned int NVectorComponents = 1;
-    typedef VectorPixelCompare<RealType, NVectorComponents> CompareType;
-    typedef typename itk::LabelImageGaussianInterpolateImageFunction<ImageType, RealType,
-	    CompareType> MultiLabelInterpolatorType;
+    typedef typename itk::LabelImageGaussianInterpolateImageFunction<ImageType, RealType> MultiLabelInterpolatorType;
     typename MultiLabelInterpolatorType::Pointer multiLabelInterpolator = MultiLabelInterpolatorType::New();
     double sigma[VImageDimension];
     for( unsigned int d = 0; d < VImageDimension; d++ )
